--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/hotelmanagement
     username: postgres
-    password: Tantran308@@
+    password:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
