update register & login handle

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/hotelmanagement
-    username:
-    password:
+    username: postgres
+    password: Tantran308@@
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
